apps/immich/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-server
  namespace: immich
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: immich-server
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: immich-machine-learning
  namespace: immich
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: immich-machine-learning
  ports:
    - name: http
      port: 3003
      targetPort: http
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: immich-valkey
  namespace: immich
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: immich-valkey
  ports:
    - name: redis
      port: 6379
      targetPort: redis
      protocol: TCP
